# resume_tailoring

./: .env.example  .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  resume_parser.py  resume_tailor.py
.cursor/rules/: collaborative-thinking-agent.mdc  core-thinking-principles-agent.mdc  deep-technical-thinking-agent.mdc  emoji-communication-agent.mdc  git-commit-agent.mdc  git-workflow-always.mdc  global_rules.md  markdown-standards-auto.mdc  output-format-agent.mdc  project_rules.md  python-standards-auto.mdc  response-format-always.mdc  rule-generating-agent.mdc
.github/workflows/: ci.yml
resume_tailor/: __init__.py  exceptions.py  models.py  parser.py  resume_parser.py  resume_tailor.py
resume_tailor/core/: __init__.py  resume_parser.py  resume_tailor.py
resume_tailor/extractor/: __init__.py  extractor.py  scraper.py
resume_tailor/llm/: __init__.py  client.py
resume_tailor/scoring/: __init__.py  embedding_scorer.py  llm_scorer.py  models.py  score_combiner.py
resume_tailor/tailor/: __init__.py  tailor.py
resume_tailor/utils/: logging.py
scripts/: test_end_to_end.py  test_job_extraction.py  test_llm_integration.py  test_scoring.py
specs/: job_description_extractor.md  resume_parser.md  resume_tailor.md  technical_overview.md
tests/: __init__.py  test_extractor.py  test_imports.py  test_llm_client.py  test_parser.py  test_resume.yaml  test_resume_flow.py  test_resume_parser.py  test_resume_tailor.py  test_scraper.py
tests/scoring/: test_embedding_scorer.py  test_llm_scorer.py  test_score_combiner.py
