[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "resume-tailor"
version = "0.1.0"
description = "A tool to help tailor resumes to job descriptions using AI"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.6.3",
    "PyYAML>=6.0.1",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.3",
    "langchain>=0.1.12",
    "langchain-community>=0.0.27",
    "langchain-core>=0.1.30",
    "langchain-openai>=0.0.8",
    "openai>=1.14.1",
    "python-dotenv==1.0.1",
    "playwright>=1.42.0",
    "pytest-playwright>=0.4.0",
    "pytest>=8.0.2",
    "pytest-cov==4.1.0",
    "sentence-transformers>=3.4.1"
]

[tool.setuptools.packages.find]
include = ["resume_tailor*"]
exclude = ["specs*", "tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=resume_tailor" 